# claude-cookbook-demo

./: .env.example  .gitignore  CLAUDE.local.md  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_create_links.py
specs/: PROJECT.md  TECH_SPEC.md
specs/cycles/: CYCLE_01.md  CYCLE_01_TASKS.md  CYCLE_TASKS_TEMPLATE.md  CYCLE_TEMPLATE.md
src/app/: config.py  deps.py  main.py
src/app/models/: link.py
src/app/repositories/: links.py
src/app/routes/: redirect.py  shorten.py
src/app/schemas/: link.py
src/app/services/: errors.py  shortener.py
tests/: conftest.py  test_fixtures_smoke.py
tests/integration/: test_health_endpoint.py  test_logging.py  test_redirect_endpoint.py  test_round_trip.py  test_shorten_endpoint.py
tests/unit/: test_app_factory.py  test_code_generation.py  test_config.py  test_deps_and_shorten_route.py  test_migration.py  test_redirect_route.py  test_repository.py  test_schemas.py  test_shortener_service.py
